@@ -3,6 +3,8 @@ CHANGELOG Roundcube Webmail
 
 - Enigma: Fix so key list selection is reset when opening key creation form (#7154)
 - Enigma: Fix so using list checkbox selection does not load the key preview frame
+- Enigma: Fix generation of key pairs for identities with IDN domains (#7181)
+- Enigma: Display IDN domains of key users and identities in UTF8
 - Password: Make chpass-wrapper.py Python 3 compatible (#7135)
 - Elastic: Fix bug where it was possible to switch editor mode when 'htmleditor' was in 'dont_override' (#7143)
 - Elastic: Fix text selection in recipient inputs (#7129)
